Update StructUsing.java